Sprint 01 - Implementando API autenticacao
